--- a/src/components/icons/icons.module.scss
+++ b/src/components/icons/icons.module.scss
@@ -1,6 +1,20 @@
 .sfIcon {
   display: inline-block;
   vertical-align: middle;
+  color: inherit;
+  filter: brightness(0) invert(1);
+
+  [data-theme="light"] & {
+    filter: none;
+  }
+}
+
+[data-theme="dark"] .sfIcon {
+  filter: brightness(0) invert(1);
+}
+
+[data-theme="light"] .sfIcon {
+  filter: none;
 }
 
 .chevron {
@@ -8,6 +22,7 @@
   align-items: center;
   justify-content: center;
   transition: transform 0.2s ease;
+  color: var(--text);
 }
 
 .chevronDown {
